ajuste no min-height para 690px no .fultextpage

--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -195,6 +195,7 @@ div#idicontentpages {
     z-index: 99;
     background-repeat: no-repeat;
     background-size: cover;
+	min-height: 690px;
 }
 
 /*----Páginas de Capa-----*/
