--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -195,7 +195,7 @@ div#idicontentpages {
     z-index: 99;
     background-repeat: no-repeat;
     background-size: cover;
-	min-height: 690px;
+	min-height: 690px!important;
 }
 
 /*----Páginas de Capa-----*/
