ajuste no z index do texto da página de capa

--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -207,8 +207,11 @@ div#idicontentpages {
 }*/
 
 .contentcoverpage p.read-more-wrap {
+	position: relative;
     max-height: 256px;
     overflow-y: scroll;
+	z-index: 998;
+
 }
 
 
