--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -395,12 +395,25 @@ textarea#idcommentnote, textarea#idcommentdoubt {
     max-width: 98%;
 }
 
-.buttonscomment {
-   color: #373a3c;
-   padding-right: 0.5em;
-   border: solid 1px green;
+.notecomment {
+    display: flex;
+    flex-flow: column;
 }
 
+.replynotecomment {
+    min-width: 60%;
+    margin-left: 2.0em;
+}
+
+.buttonscomment {
+   	border: solid 1px green;
+	margin-left: 2.0em;
+}
+.buttonscomment button {
+    color: #373a3c;
+    padding: 0 0.5em;
+    /* border: solid 1px #1177d1; */
+}
 
 .path-mod-icontent .icontent-page .notesarea .notelist .noterowicontent .notefooter a {
     cursor: pointer;
