--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -457,6 +457,15 @@ em.noteon {
     z-index: 998!important;
 }
 
+/*-------Para definir o título das colunas---------*/
+
+.page-layout.columns-1 h3, .page-layout.columns-2 h3, .page-layout.columns-3 h3, .page-layout.columns-4 h3, .page-layout.columns-5 h3{
+   border: solid 1px red;
+   -webkit-column-span: all;
+   column-span: all;
+	
+}
+
 
 
 
