--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -462,7 +462,8 @@ em.noteon {
 .page-layout.columns-1 h3, .page-layout.columns-2 h3, .page-layout.columns-3 h3, .page-layout.columns-4 h3, .page-layout.columns-5 h3{
    border: solid 1px red;
    -webkit-column-span: all;
-   column-span: all;
+	column-span: all;
+	font-weight: bold;
 	
 }
 
