acrecentado width: 40px no elemento next page

--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -162,6 +162,7 @@ div#fgroup_id_buttonar {
     background-repeat: no-repeat!important;
     background-position: 0px!important;
     min-width: 40px!important;
+	width: 40px;
     
 }
 
