z-index no botão leia mais

--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -214,8 +214,11 @@ div#idicontentpages {
 	z-index: 998;
 
 }
-
-
+/*Serve para elevar o botão leia mais*/
+.state-readmore {
+    position: relative;
+    z-index: 996;
+}
 
 
 
