definida a largura máxima para o botão de comentários

--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -360,6 +360,11 @@ icontent-buttonbar button {
 
 
 /*----Área de Perguntas----*/
+.path-mod-icontent .notesarea .titlenotes {
+    max-width: 300px!important;
+}
+
+
 div#idnotesarea {
     position: absolute;
     max-width: 50%;
