definida a largura para a área de perguntas

--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -381,6 +381,7 @@ div#idfulltab {
     z-index: 9999;
     padding: 1.1em;
     border-radius: 0 20px 20px 20px;
+	width: 55%;
 }
 
 div#idtabicontent {
