--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -573,6 +573,34 @@ em.noteon {
 
 
 
+.btn-primary {
+    color: #fff!important;
+    text-shadow: 0 -1px 0 rgba(0,0,0,0.25)!important;
+    background-color: #005aa8!important;
+    background-image: -moz-linear-gradient(top, #0070a8, #0038a8)!important;
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0070a8), to(#0038a8))!important;
+    background-image: -webkit-linear-gradient(top, #0070a8, #0038a8)!important;
+    background-image: -o-linear-gradient(top, #0070a8, #0038a8)!important;
+    background-image: linear-gradient(to bottom, #0070a8, #0038a8)!important;
+    background-repeat: repeat-x!important;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0070a8', endColorstr='#ff0038a8', GradientType=0)!important;
+    border-color: #0038a8 #0038a8 #001e5c!important;
+    border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0,0,0,0.25)!important;
+    filter: progid:DXImageTransform.Microsoft.gradient(enabled = false)!important;
+}
+
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .btn-primary.disabled, .btn-primary[disabled] {
+    color: #fff!important;
+    background-color: #0696f8!important;
+    background-image: linear-gradient(to bottom, #0696f8, #0696f8)!important;
+}
+
+
+
+
+
+
+
 /*---------------------Estilo Responsivo---------------------------*/
 
 
