--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -561,11 +561,27 @@ em.noteon {
 
 
 .video-js .vjs-big-play-button {
-    width: 2em!important;
-    position: absolute!important;
-    top: 50%!important;
+	top: 50%!important;
     left: 50%!important;
-    margin: -25px 0 0 -25px!important;
+    margin: -25px 0 0 -50px!important;
+ 	font-size: 3em!important;
+    line-height: 1.5em!important;
+    height: 1.5em!important;
+    width: 3em!important;
+    display: block!important;
+    position: absolute!important;
+	opacity: 1!important;
+    border: .06666em solid #fff!important;
+    background-color: #2b333f!important;
+    background-color: rgba(43,51,63,.7)!important;
+    -webkit-border-radius: .3em!important;
+    -moz-border-radius: .3em!important;
+    border-radius: .3em!important;
+    -webkit-transition: all .4s!important;
+    -moz-transition: all .4s!important;
+    -ms-transition: all .4s!important;
+    -o-transition: all .4s!important;
+    transition: all .4s!important;
     
 }
 
