--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -53,22 +53,22 @@ center form + div:after, div.backup-section + form:after, #fgroup_id_buttonar:af
 }
 
 button {
-    display: inline-block!important;
-    background: inherit!important;
-    border: none!important;
-    padding: 0!important;
-    margin: 0!important;
-    text-decoration: none!important;
-    color: #ffffff!important;
-    font-family: inherit!important;
-    font-size: inherit!important;
-    cursor: pointer!important;
-    text-align: center!important;
-    transition:inherit!important;
-    -webkit-appearance: none!important;
-    -moz-appearance: none!important;
-	border-radius: inherit!important;
-	-webkit-moz-border-radius: inherit!important;
+    display: inline-block;
+    background: inherit;
+    border: none;
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    color: #ffffff;
+    font-family: inherit;
+    font-size: inherit;
+    cursor: pointer;
+    text-align: center;
+    transition:inherit;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+	border-radius: inherit;
+	-webkit-moz-border-radius: inherit;
 
 }
 
@@ -116,7 +116,37 @@ div#idicontentpages {
 
 /*------------Avançar e Voltar------------------*/
 
+
+div#fgroup_id_buttonar button {
+
+
+display: inline-block!important;
+    background: inherit!important;
+    border: none!important;
+    padding: 0!important;
+    margin: 0!important;
+    text-decoration: none!important;
+    color: #ffffff!important;
+    font-family: inherit!important;
+    font-size: inherit!important;
+    cursor: pointer!important;
+    text-align: center!important;
+    transition:inherit!important;
+    -webkit-appearance: none!important;
+    -moz-appearance: none!important;
+	border-radius: inherit!important;
+	-webkit-moz-border-radius: inherit!important;	
+
+}
+
+
+
+
+
+
 div#fgroup_id_buttonar {
+	
+	 	
     width: 100%!important;
     position: relative!important;
     display: flex!important;
@@ -561,30 +591,13 @@ em.noteon {
 
 
 .video-js .vjs-big-play-button {
-	top: 50%!important;
-    left: 50%!important;
-    margin: -25px 0 0 -50px!important;
- 	font-size: 3em!important;
-    line-height: 1.5em!important;
-    height: 1.5em!important;
-    width: 3em!important;
-    display: block!important;
-    position: absolute!important;
-	opacity: 1!important;
-    border: .06666em solid #fff!important;
-    background-color: #2b333f!important;
-    background-color: rgba(43,51,63,.7)!important;
-    -webkit-border-radius: .3em!important;
-    -moz-border-radius: .3em!important;
-    border-radius: .3em!important;
-    -webkit-transition: all .4s!important;
-    -moz-transition: all .4s!important;
-    -ms-transition: all .4s!important;
-    -o-transition: all .4s!important;
-    transition: all .4s!important;
+    width: 2em;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -25px 0 0 -25px;
     
 }
-
 
 /************Fim do Estilo para o Container de Vídeo *****************/
 
