--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -329,6 +329,7 @@ div#idicontentpages {
 	min-width: 72px!important;
     left: -75px!important;
     padding: .5em!important;
+	margin: 0 -0.5em!important;
 }
 .full-paging-buttonbar button.load-page.btn-previous-page:hover {
     background: rgba(91,192,222,.5)!important;
