alterações no estilo responsivo e no reset.css

--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -28,6 +28,10 @@ garantindo o ajuste para o estilo responsivo aqui configurado.
 
 /*---------------------Reset CSS---------------------------*/
 
+html {
+    width: initial!important;
+}
+
 
 
 
