inserido padding:0 25px; para .headercoverpage row no estilo responsivo

--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -686,8 +686,14 @@ em.noteon {
 	.path-mod-icontent .headercoverpage {
     padding: unset;
 	}
+	
+	.path-mod-icontent .icontent-page .row {
+    padding: 0 25%!important;
+    text-align: center!important;
+}
 
 
+	
 .path-mod-icontent .full-paging-buttonbar {
 	display:none!important;
 	
