--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -219,6 +219,11 @@ div#fgroup_id_buttonar {
 
 
 /*-------------------------------- Conteúdo-----------------------------*/
+
+.page-layout {
+    top: 130px
+}
+
 div#idicontentpages {
 	/*display: flex;
 	flex-direction: column;
@@ -274,17 +279,19 @@ div#idicontentpages {
     background-color: rgba(17,119,209,.5);
     color: #fff;
     padding: .1em;
-    padding-left: .5em;
-    width: 105%;
-    position: relative;
-    left: -3%;
-    top: -5px;
- }
+    padding-left: 0.5em;
+    width: 74.1%;
+    clear: both;
+    position: absolute;
+}
 .path-mod-icontent .icontent-page .fulltextpage .toolbarpage {
     text-align: right;
     position: relative;
-    top: 35px;
     z-index: 999;
+    padding: 0 4.5em;
+    border-radius: 22px 0px 0 0;
+    background-color: rgba(17,119,209,.5);
+    width: 104.5%;
 }
 .toolbarpage .icon {
        color: #dee2e6;
