--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -296,7 +296,7 @@ div#idicontentpages {
     color: #fff;
     padding-top: 0.5em;
     padding-left: 1.0em;
-    height: 83px;
+    max-height: 83px;
     clear: both;
     overflow: hidden;
 }
