--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -781,9 +781,9 @@ em.noteon {
 	
 	
 .page-layout.columns-1, .page-layout.columns-2, .page-layout.columns-3, .page-layout.columns-4, .page-layout.columns-5 {
-    position: relative!important;
-    min-height: 365px!important;
-    max-height: 370px!important;
+    /* position: relative!important; */
+    min-height: 421px!important;
+    max-height: 422px!important;
     overflow: auto!important;
     z-index: 998!important;
 }	
