--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -568,7 +568,31 @@ em.noteon {
 
 
 
-/*-------------------------mancha gráfica total----------*/
+/*----------------- Alto Contraste----------*/
+
+
+
+
+.path-mod-icontent .icontent-page .highcontrast p, .path-mod-icontent .icontent-page .highcontrast b, .path-mod-icontent .icontent-page .highcontrast strong, .path-mod-icontent .icontent-page .highcontrast span, .path-mod-icontent .icontent-page .highcontrast {
+    /* color: #fff; */
+    text-decoration: none;
+    text-shadow: initial!important;
+    font-weight: bold;
+    font-size: 15px!important;
+}
+
+.fulltextpage.highcontrast {
+    background-color: #d6be6b;
+}
+
+/*---------fim do Alto Contraste----------*/
+
+/*-------------------------fim da mancha gráfica total----------*/
+
+
+
+
+
 
 /*--------------------------------Fim do Conteúdo-----------------------------*/
 
