--- a/styles/novaskin.css
+++ b/styles/novaskin.css
@@ -573,16 +573,16 @@ em.noteon {
 
 
 
+
 .path-mod-icontent .icontent-page .highcontrast p, .path-mod-icontent .icontent-page .highcontrast b, .path-mod-icontent .icontent-page .highcontrast strong, .path-mod-icontent .icontent-page .highcontrast span, .path-mod-icontent .icontent-page .highcontrast {
-    /* color: #fff; */
-    text-decoration: none;
-    text-shadow: initial!important;
-    font-weight: bold;
-    font-size: 15px!important;
+    color: #bbb!important;
 }
 
+
+
 .fulltextpage.highcontrast {
-    background-color: #d6be6b;
+    /* background-color: #d6be6b!important; */
+    background-color: #373a3cd6!important;
 }
 
 /*---------fim do Alto Contraste----------*/
